k8s/overlays/api-local/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: spot-render-api
  namespace: spot-render
spec:
  template:
    spec:
      containers:
        - name: api
          volumeMounts:
            - name: render-storage
              mountPath: /storage
      volumes:
        - name: render-storage
          persistentVolumeClaim:
            claimName: spot-render-storage
