k8s/overlays/api-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spot-render-backend
  namespace: spot-render
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.spot-render.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spot-render-backend-stable
                port:
                  number: 80
